--- a/src/Components/TaskList/TaskList.css
+++ b/src/Components/TaskList/TaskList.css
@@ -11,10 +11,10 @@
         border-radius: 5px;
         background: rgb(230, 230, 236);
         margin: 5px;
-        padding: 0;
         transition: transform .3s;
+        position: relative;
 }
-.cardcontent{
+.cardcontainer{
     display: flex;
     flex-wrap: wrap;
 }
@@ -27,12 +27,9 @@
     font-weight: 700;
     padding: 5px 10px;
 }
-.cardcontent p{
-    font-size: 14px;
-    font-weight: 500;
-    padding: 5px 10px;
-}
 .cardbody:hover{
     color: green;
     transform: scale(1.02);
 }
+
+
