--- a/src/Components/employers/Employers.css
+++ b/src/Components/employers/Employers.css
@@ -39,12 +39,14 @@ p{
     color: blue;
     padding: 8px;
     font-size: 18px;
+    cursor: pointer;
 }
 .delete{
     transition: transform .3s;
     color: red;
     padding-left: 8px;
     font-size: 18px;
+    cursor: pointer;
 }
 .edit:hover{
     
